Make changes to width of description containers to not leave too much whitepsace. Fix grammatical errors

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -92,7 +92,7 @@ body, html {
 .philosophy-description {
   font: 300 18px 'Lato', sans-serif;
   color: #5E5D5F;
-  width: 350px;
+  width: 360px;
   margin: 0;
 }
 
